--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,7 @@ checker-qual/src
 checker-qual-android/src
 
 framework/tests/whole-program-inference/annotated/
+framework/tests/returnsreceiverlombok/delomboked/
 
 docs/tutorial/src/personalblog-demo/bin/net/eyde/personalblog/service/PersonalBlogService.class
 docs/tutorial/src/personalblog-demo/bin/net/eyde/personalblog/struts/action/ReadAction.class
@@ -136,3 +137,4 @@ target/
 *.iws
 *.iml
 /.gradle/
+
