--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -58,13 +58,15 @@ task cloneTypetoolsJdk() {
 }
 
 task copyJdk11Files(dependsOn: cloneTypetoolsJdk, group: 'Build') {
+    def inputDir = "${jdkHome}/src"
     def outputDir = "${buildDir}/jdk/jdk11"
     description "Copy annotated jdk 11 files to ${outputDir}"
 
+    inputs.dir file(inputDir)
     outputs.dir file(outputDir)
 
     doLast {
-        FileTree tree = fileTree(dir: "${jdkHome}/src/")
+        FileTree tree = fileTree(dir: inputDir)
         SortedSet<String> annotatedForFiles = new TreeSet<>();
         tree.visit { FileVisitDetails fvd ->
             if (!fvd.file.isDirectory() && fvd.file.name.matches(".*\\.java")) {
