Add inputs and outputs for copyJdk11Files task (#3261)
Fixes #3111

--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -58,9 +58,15 @@ task cloneTypetoolsJdk() {
 }
 
 task copyJdk11Files(dependsOn: cloneTypetoolsJdk, group: 'Build') {
-    description "Copy annotated jdk 11 files to ${buildDir}/jdk/jdk11/"
+    def inputDir = "${jdkHome}/src"
+    def outputDir = "${buildDir}/jdk/jdk11"
+    description "Copy annotated jdk 11 files to ${outputDir}"
+
+    inputs.dir file(inputDir)
+    outputs.dir file(outputDir)
+
     doLast {
-        FileTree tree = fileTree(dir: "${jdkHome}/src/")
+        FileTree tree = fileTree(dir: inputDir)
         SortedSet<String> annotatedForFiles = new TreeSet<>();
         tree.visit { FileVisitDetails fvd ->
             if (!fvd.file.isDirectory() && fvd.file.name.matches(".*\\.java")) {
@@ -76,7 +82,7 @@ task copyJdk11Files(dependsOn: cloneTypetoolsJdk, group: 'Build') {
         int jdkDirStringSize = absolutejdkHome.size()
         copy {
             from(jdkHome)
-            into("${buildDir}/jdk/jdk11/")
+            into(outputDir)
             for (String filename : annotatedForFiles) {
                 include filename.substring(jdkDirStringSize)
             }
