--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -57,10 +57,10 @@ task cloneTypetoolsJdk() {
     }
 }
 
-task copyJdk11Files(dependsOn: cloneTypetoolsJdk, group: 'Build') {
+task copyAnnotatedJdkFiles(dependsOn: cloneTypetoolsJdk, group: 'Build') {
     def inputDir = "${jdkHome}/src"
     def outputDir = "${buildDir}/generated-resources/annotated-jdk/"
-    description "Copy annotated jdk 11 files to ${outputDir}"
+    description "Copy annotated jdk files to ${outputDir}"
 
     inputs.dir file(inputDir)
     outputs.dir file(outputDir)
@@ -90,7 +90,7 @@ task copyJdk11Files(dependsOn: cloneTypetoolsJdk, group: 'Build') {
     }
 }
 
-processResources.dependsOn(copyJdk11Files)
+processResources.dependsOn(copyAnnotatedJdkFiles)
 
 jar {
     manifest {
