Rename the resource directory jdk11 to annotated-jdk. (#3262)

--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -13,7 +13,7 @@ sourceSets {
     main {
         resources {
             // Stub files, message.properties, etc.
-            srcDirs += ['src/main/java', "${buildDir}/jdk"]
+            srcDirs += ['src/main/java', "${buildDir}/generated-resources"]
         }
     }
     testannotations
@@ -57,10 +57,10 @@ task cloneTypetoolsJdk() {
     }
 }
 
-task copyJdk11Files(dependsOn: cloneTypetoolsJdk, group: 'Build') {
+task copyAnnotatedJdkFiles(dependsOn: cloneTypetoolsJdk, group: 'Build') {
     def inputDir = "${jdkHome}/src"
-    def outputDir = "${buildDir}/jdk/jdk11"
-    description "Copy annotated jdk 11 files to ${outputDir}"
+    def outputDir = "${buildDir}/generated-resources/annotated-jdk/"
+    description "Copy annotated jdk files to ${outputDir}"
 
     inputs.dir file(inputDir)
     outputs.dir file(outputDir)
@@ -90,7 +90,7 @@ task copyJdk11Files(dependsOn: cloneTypetoolsJdk, group: 'Build') {
     }
 }
 
-processResources.dependsOn(copyJdk11Files)
+processResources.dependsOn(copyAnnotatedJdkFiles)
 
 jar {
     manifest {
