--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -91,7 +91,7 @@ task copyAnnotatedJdkFiles(dependsOn: cloneTypetoolsJdk, group: 'Build') {
 }
 
 task minimizeJdk(type: JavaExec) {
-    discription 'Removes all private and package private methods and all method bodies from the annotated jdk.'
+    description 'Removes all private and package private methods and all method bodies from the annotated jdk.'
     dependsOn copyAnnotatedJdkFiles
     dependsOn ':framework:compileJava'
     classpath = project(':framework').sourceSets.main.runtimeClasspath
