--- a/build.gradle
+++ b/build.gradle
@@ -227,7 +227,6 @@ allprojects {
 task cloneAndBuildDependencies(type: Exec) {
     description 'Clones (or updates) and builds all dependencies'
     executable 'checker/bin-devel/build.sh'
-    args = ['downloadjdk']
 }
 
 task version() {
@@ -249,7 +248,6 @@ def createCheckTypeTask(projectName, checker, shortName, args = []) {
     project("${projectName}").tasks.create(name: "check${shortName}", type: JavaCompile, dependsOn: ':checker:shadowJar') {
         description "Run the ${shortName} Checker on the main sources."
         group 'Verification'
-        dependsOn ':checker:updateJdk'
         // Always run the task.
         outputs.upToDateWhen { false }
         source = project("${projectName}").sourceSets.main.java
@@ -266,7 +264,6 @@ def createCheckTypeTask(projectName, checker, shortName, args = []) {
 
         if (isJava8) {
             options.compilerArgs += [
-                "-Xbootclasspath/p:${rootDir}/checker/dist/jdk8.jar",
                 "-source",
                 "8",
                 "-target",
@@ -330,7 +327,6 @@ task htmlValidate(type: Exec, group: 'Format') {
             "/api/",
             "/build/",
             "/docs/manual/manual.html",
-            "/checker/jdk/nullness/src/java/lang/ref/package.html"
     ]
 }
 
@@ -523,8 +519,8 @@ subprojects {
 
     task checkFormat(type: Exec, dependsOn: [getCodeFormatScripts, pythonIsInstalled], group: 'Format') {
         description 'Check whether the source code is properly formatted'
-        // jdk8 and checker-qual have no source, so skip
-        onlyIf { !project.name.is('jdk8') && !project.name.startsWith('checker-qual') }
+        // checker-qual* projects have no source, so skip
+        onlyIf {!project.name.startsWith('checker-qual') }
         executable 'python'
 
         doFirst {
@@ -542,8 +538,8 @@ subprojects {
 
     task reformat(type: Exec, dependsOn: [getCodeFormatScripts, pythonIsInstalled], group: 'Format') {
         description 'Format the Java source code'
-        // jdk8 and checker-qual have no source, so skip
-        onlyIf { !project.name.is('jdk8') && !project.name.startsWith('checker-qual') }
+        // checker-qual* projects have no source, so skip
+        onlyIf { !project.name.startsWith('checker-qual') }
         executable 'python'
         doFirst {
             args += "${formatScriptsHome}/run-google-java-format.py"
@@ -576,7 +572,7 @@ subprojects {
         relocate 'plume', 'org.checkerframework.plume'
     }
 
-    if (!project.name.startsWith('checker-qual') && !project.name.is('jdk8')) {
+    if (!project.name.startsWith('checker-qual')) {
         task tags(type: Exec) {
             description 'Create Emacs TAGS table'
             commandLine "bash", "-c", "find . \\( -name jdk \\) -prune -o -name '*.java' -print | sort-directory-order | xargs ctags -e -f TAGS"
@@ -642,7 +638,6 @@ subprojects {
                 description 'Run the jtreg tests.'
                 dependsOn('compileJava')
                 dependsOn('compileTestJava')
-                dependsOn(':checker:updateJdk')
                 dependsOn('shadowJar')
 
                 String jtregOutput = "${buildDir}/jtreg"
@@ -671,11 +666,6 @@ subprojects {
                                 "-javacoptions:-source 8",
                                 "-javacoptions:-target 8"
                                 ]
-                            if (project.name.is('checker')) {
-                                args += [
-                                        "-javacoptions:-Xbootclasspath/p:${projectDir}/dist/jdk8.jar",
-                                ]
-                            }
                         } else {
                             args += [
                                     // checker/jtreg/nullness/defaultsPersist/ReferenceInfoUtil.java
@@ -727,7 +717,6 @@ subprojects {
 
             if (project.name.is('checker')) {
                 dependsOn('copyJarsToDist')
-                systemProperties += [JDK_JAR: "${projectDir}/dist/jdk8.jar"]
             }
 
             if (project.hasProperty('emit.test.debug')) {
