--- a/build.gradle
+++ b/build.gradle
@@ -327,6 +327,7 @@ task htmlValidate(type: Exec, group: 'Format') {
             "/api/",
             "/build/",
             "/docs/manual/manual.html",
+            "/checker/jdk/nullness/src/java/lang/ref/package.html"
     ]
 }
 
