--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -60,7 +60,7 @@ task cloneTypetoolsJdk() {
 task copyAnnotatedJdkFiles(dependsOn: cloneTypetoolsJdk, group: 'Build') {
     def inputDir = "${jdkHome}/src"
     def outputDir = "${buildDir}/generated-resources/annotated-jdk/"
-    description "Copy annotated jdk files to ${outputDir}"
+    description "Copy annotated JDK files to ${outputDir}"
 
     inputs.dir file(inputDir)
     outputs.dir file(outputDir)
