--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 }
 
 task cloneTypetoolsJdk() {
-    description 'Obtain or update the annotated jdk.'
+    description 'Obtain or update the annotated JDK.'
     doLast {
         if (file(annotatedJdkHome).exists()) {
             exec {
@@ -52,7 +52,7 @@ task cloneTypetoolsJdk() {
 task copyAnnotatedJdkFiles(dependsOn: cloneTypetoolsJdk, group: 'Build') {
     def inputDir = "${annotatedJdkHome}/src"
     def outputDir = "${buildDir}/generated-resources/annotated-jdk/"
-    description "Copy annotated jdk files to ${outputDir}"
+    description "Copy annotated JDK files to ${outputDir}"
 
     inputs.dir file(inputDir)
     outputs.dir file(outputDir)
