--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -58,8 +58,12 @@ task cloneTypetoolsJdk() {
 }
 
 task copyAnnotatedJdkFiles(dependsOn: cloneTypetoolsJdk, group: 'Build') {
+    // Make two copies of the annotated JDK. One to minimize and one to use in the up to date
+    // check of task minimizeJdk. See minimizeJdk for more details.
     def inputDir = "${jdkHome}/src"
-    def outputDir = "${buildDir}/generated-resources/annotated-jdk/"
+    def outputDir = "${buildDir}/generated-resources/not-minimized-annotated-jdk/"
+    def dirToBeMinimized = "${buildDir}/generated-resources/annotated-jdk/"
+
     description "Copy annotated JDK files to ${outputDir}"
 
     inputs.dir file(inputDir)
@@ -90,6 +94,13 @@ task copyAnnotatedJdkFiles(dependsOn: cloneTypetoolsJdk, group: 'Build') {
                 include filename.substring(jdkDirStringSize)
             }
         }
+        copy {
+            from(jdkHome)
+            into(dirToBeMinimized)
+            for (String filename : annotatedForFiles) {
+                include filename.substring(jdkDirStringSize)
+            }
+        }
     }
 }
 
@@ -97,6 +108,13 @@ task minimizeJdk(type: JavaExec) {
     description 'Removes private and package-private methods, method bodies, comments, etc. from the annotated JDK.'
     dependsOn copyAnnotatedJdkFiles
     dependsOn ':framework:compileJava'
+    // JavaStubifier minimizes files in place, so that the inputs are the same as the outputs. So,
+    // use a copy of the annotated JDK created by copyAnnotatedJdkFiles task as the "input" to this task.
+    def inputDir = "${buildDir}/generated-resources/not-minimized-annotated-jdk/"
+    def outputDir = "${buildDir}/generated-resources/annotated-jdk/"
+    inputs.dir file(inputDir)
+    outputs.dir file(outputDir)
+
     classpath = project(':framework').sourceSets.main.runtimeClasspath
 
     main = 'org.checkerframework.framework.stub.JavaStubifier'
