--- a/checker/tests/nullness-extra/Makefile
+++ b/checker/tests/nullness-extra/Makefile
@@ -1,9 +1,8 @@
 # Tests that are currently passing
-PASSING_TESTS = Bug109 compat issue265 issue594 issue607 multiple-errors package-anno shorthand
+PASSING_TESTS = Bug109 compat issue265 issue594 issue607 multiple-errors package-anno shorthand issue559
 ifeq (,$(findstring 1.8,$(shell javac -version)))
   # issue309 and issue502 fail with Java 11 because of differences between Java 8 and Java 11 bytecode.
-  # TODO: issue559 should work with an annotated jdk11.
-  PASSING_TESTS_JDK8 = issue309 issue502 issue559
+  PASSING_TESTS_JDK8 = issue309 issue502
 else
   PASSING_TESTS_JDK8 =
 endif
