--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -88,7 +88,7 @@ task copyAnnotatedJdkFiles(dependsOn: cloneTypetoolsJdk, group: 'Build') {
             }
         }
         copy {
-            from(jdkHome)
+            from(annotatedJdkHome)
             into(dirToBeMinimized)
             for (String filename : annotatedForFiles) {
                 include filename.substring(jdkDirStringSize)
