Allow for parallel builds and tests (#3283)

--- a/build.gradle
+++ b/build.gradle
@@ -714,6 +714,8 @@ subprojects {
                 ]
             }
 
+            maxParallelForks = Integer.MAX_VALUE
+
             if (project.name.is('checker')) {
                 dependsOn('copyJarsToDist')
             }
