--- a/build.gradle
+++ b/build.gradle
@@ -159,6 +159,8 @@ allprojects {
                 file("${destinationDir}/resources/fonts/").mkdirs()
                 ant.touch(file: "${destinationDir}/resources/fonts/dejavu.css")
                 options.addStringOption('source', '8')
+                options.addBooleanOption('Xwerror', true)
+                options.addStringOption('Xmaxwarns', '99999')
             }
         }
 
@@ -408,7 +410,6 @@ def createJavadocTask(taskName, taskDescription, memberLevel) {
         options.memberLevel = memberLevel
         options.addBooleanOption('Xdoclint:all', true)
         options.addStringOption('Xmaxwarns', '99999')
-	options.addStringOption('Xwerror', '-quiet')
 
         // options.addStringOption('skip', 'ClassNotToCheck|OtherClass')
     }
