--- a/docs/manual/figures/Makefile
+++ b/docs/manual/figures/Makefile
@@ -9,7 +9,7 @@ RSVG_CONVERT_VERSION := $(shell rsvg-convert --version 2>/dev/null)
 all: ${PDFFILES} clean-obsolete-files svg-copy
 
 svg-copy:
-	chmod -f +w ../*.svg *.svg
+	-chmod -f +w ../*.svg
 	cp -pf *.svg ..
 	chmod -f -w ../*.svg
 
