Use AFU in local Maven repo.

--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -25,12 +25,12 @@ dependencies {
     implementation project(':dataflow')
     implementation project(':javacutil')
     implementation files("${stubparserJar}")
-    implementation files("${afuJar}")
+    implementation('org.checkerframework:annotation-file-utilities:3.9.9-SNAPSHOT') {
+        exclude group: 'com.google', module: 'javac'
+    }
     implementation project(':checker-qual')
-    // As of 2019/12/16, the version of reflection-util in the Annotation
-    // File Utilities takes priority over this version, in the fat jar
-    // file. :-( So update it and re-build it locally when updating this.
     implementation 'org.plumelib:reflection-util:0.2.2'
+    implementation 'org.plumelib:plume-util:1.1.4'
 
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation project(':framework-test')
@@ -46,12 +46,6 @@ dependencies {
 
 task checkDependencies(dependsOn: ':maybeCloneAndBuildDependencies') {
     doLast {
-        if (!file(afuJar).exists()) {
-            if (!file(stubparserJar).exists()) {
-                throw new GradleException("${afuJar} and ${stubparserJar} do not exist. Try running './gradlew cloneAndBuildDependencies'")
-            }
-            throw new GradleException("${afuJar} does not exist. Try running './gradlew cloneAndBuildDependencies'")
-        }
         if (!file(stubparserJar).exists()) {
             throw new GradleException("${stubparserJar} does not exist. Try running './gradlew cloneAndBuildDependencies'")
         }
