--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -42,6 +42,16 @@ dependencies {
 
     // Lombok support in Returns Receiver Checker
     testImplementation "org.projectlombok:lombok:${versions.lombok}"
+
+    // TODO: The annotated version of Guava gives an error:
+    // org.checkerframework.annotatedlib/guava/.../guava-28.2-jre.jar(/com/google/common/collect/ImmutableCollection.class):
+    // warning: Cannot find annotation method 'value()' in type 'DoNotMock': class file for com.google.errorprone.annotations.DoNotMock not found
+    // testImplementation ('org.checkerframework.annotatedlib:guava:28.2-jre') {
+
+    testImplementation ('com.google.guava:guava:28.2-jre') {
+    // So long as Guava only uses annotations from checker-qual, excluding it should not cause problems.
+        exclude group: 'org.checkerframework'
+    }
 }
 
 task checkDependencies(dependsOn: ':maybeCloneAndBuildDependencies') {
