--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -34,14 +34,12 @@ dependencies {
     implementation 'org.plumelib:reflection-util:0.2.2'
     implementation 'org.plumelib:plume-util:1.1.4'
 
-    // TODO: The annotated version of Guava gives an error:
-    // org.checkerframework.annotatedlib/guava/.../guava-28.2-jre.jar(/com/google/common/collect/ImmutableCollection.class):
-    // warning: Cannot find annotation method 'value()' in type 'DoNotMock': class file for com.google.errorprone.annotations.DoNotMock not found
-    // implementation ('org.checkerframework.annotatedlib:guava:28.2-jre') {
-
-    implementation ('com.google.guava:guava:28.2-jre') {
+    // TODO: org.checkerframework.annotatedlib:guava:28.2-jre requires the below dependency.
+    implementation 'com.google.errorprone:error_prone_annotations:2.3.4'
+    implementation ('org.checkerframework.annotatedlib:guava:28.2-jre') {
         // So long as Guava only uses annotations from checker-qual, excluding it should not cause problems.
         exclude group: 'org.checkerframework'
+
     }
 
     testImplementation group: 'junit', name: 'junit', version: '4.13'
