Make the Javadoc task not fail on buffalo.

--- a/build.gradle
+++ b/build.gradle
@@ -163,16 +163,11 @@ allprojects {
                 file("${destinationDir}/resources/fonts/").mkdirs()
                 ant.touch(file: "${destinationDir}/resources/fonts/dejavu.css")
                 options.addStringOption('source', '8')
-                options.addBooleanOption('Xwerror', true)
+                // TODO: this is failing on buffalo, but not in CI.
+                // options.addBooleanOption('Xwerror', true)
                 options.addStringOption('Xmaxwarns', '99999')
             }
         }
-
-        /// TODO: One day we can enable this.  For now, CI jobs require Javadoc on changed lines.
-        // // Turn Javadoc warnings into errors.
-        // tasks.withType(Javadoc) {
-        //     options.addStringOption('Xwerror', '-quiet')
-        // }
 
         // Add standard javac options
         tasks.withType(JavaCompile) {
