--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     implementation 'org.plumelib:plume-util:1.1.4'
 
     // TODO: org.checkerframework.annotatedlib:guava:28.2-jre requires the below dependency.
-    implementation 'com.google.errorprone:error_prone_annotations:2.4.0'
+    // Get the version number from the "compile dependencies" section of
+    // https://mvnrepository.com/artifact/com.google.guava/guava/28.2-jre .
+    implementation 'com.google.errorprone:error_prone_annotations:2.3.4'
     implementation ('org.checkerframework.annotatedlib:guava:28.2-jre') {
         // So long as Guava only uses annotations from checker-qual, excluding it should not cause problems.
         exclude group: 'org.checkerframework'
