Move all code about the annotated jdk to framework/build.gradle.

--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -2,8 +2,7 @@ sourceSets {
     main {
         resources {
             // Stub files, message.properties, etc.
-            // TODO: There is probably a better way to refer to the framework's build/generated/resources/ directory.
-            srcDirs += ['src/main/java', "${buildDir}/generated/resources", "${buildDir}/../../framework/build/generated/resources"]
+            srcDirs += ['src/main/java']
         }
     }
     testannotations
@@ -25,8 +24,6 @@ dependencies {
 
     testannotationsImplementation project(':checker-qual')
 }
-
-processResources.dependsOn(':framework:copyAndMinimizeAnnotatedJdkFiles')
 
 jar {
     manifest {
