--- a/build.gradle
+++ b/build.gradle
@@ -812,6 +812,11 @@ subprojects {
                 }
                 dependsOn('nullnessExtraTests', 'commandLineTests', 'tutorialTests')
             }
+
+            if(project.name.is('dataflow')) {
+                // Uncomment when CFGVisualizer changes have been merged.
+                // dependsOn('liveVariableTest')
+            }
         }
 
         // Create an allTests task per project.
