Add live variable analysis to dataflow framework. (#3371)
 This PR added live variable analysis to the dataflow framework aiming to show #3370's backward analysis works properly.

Co-authored-by: Charles Chen Charleszhuochen@gmail.com

--- a/build.gradle
+++ b/build.gradle
@@ -812,6 +812,10 @@ subprojects {
                 }
                 dependsOn('nullnessExtraTests', 'commandLineTests', 'tutorialTests')
             }
+
+            if (project.name.is('dataflow')) {
+                dependsOn('liveVariableTest')
+            }
         }
 
         // Create an allTests task per project.
