Put classes in more logical order

--- a/checker-qual/build.gradle
+++ b/checker-qual/build.gradle
@@ -17,16 +17,17 @@ task copySources(type: Copy) {
     }
 
     from files('../checker/src/main/java', '../dataflow/src/main/java', '../framework/src/main/java')
+    // Qualifiers
+    include '**/org/checkerframework/**/qual/*.java'
+    include '**/PurityUnqualified.java'    // TODO: Should we move this into a qual directory?
+    // Utility classes
     include "**/FormatUtil.java"
     include "**/NullnessUtil.java"
     include "**/RegexUtil.java"
     include "**/UnitsTools.java"
     include "**/SignednessUtil.java"
     include "**/I18nFormatUtil.java"
-    include '**/org/checkerframework/**/qual/*.java'
     include '**/Opt.java'
-    // TODO: Should we move this into a qual directory?
-    include '**/PurityUnqualified.java'
 
     // Make files read only.
     fileMode(0444)
