Add another utility file

--- a/checker-qual/build.gradle
+++ b/checker-qual/build.gradle
@@ -28,6 +28,7 @@ task copySources(type: Copy) {
     include "**/Opt.java"
     include "**/RegexUtil.java"
     include "**/SignednessUtil.java"
+    // include "**/SignednessUtilExtra.java"
     include "**/UnitsTools.java"
 
     // Make files read only.
