--- a/build.gradle
+++ b/build.gradle
@@ -819,6 +819,7 @@ subprojects {
 
             if (project.name.is('dataflow')) {
                 dependsOn('liveVariableTest')
+                dependsOn('issue3447Test')
             }
         }
 
