--- a/dataflow/build.gradle
+++ b/dataflow/build.gradle
@@ -59,3 +59,25 @@ task liveVariableTest(dependsOn: compileTestJava, group: 'Verification') {
         }
     }
 }
+
+task issue3447Test(dependsOn: compileTestJava, group: 'Verification') {
+    description 'Test issue 3447 test case for backward analysis.'
+    inputs.file('tests/issue3447/Test.java')
+
+    outputs.file('tests/live-variable/Out.txt')
+    outputs.file('tests/live-variable/Test.class')
+
+    delete('tests/issue3447/Out.txt')
+    delete('tests/issue3447/Test.class')
+    doLast {
+        javaexec {
+            workingDir = 'tests/issue3447'
+            if (!JavaVersion.current().java9Compatible) {
+                jvmArgs += "-Xbootclasspath/p:${configurations.javacJar.asPath}"
+            }
+            classpath = sourceSets.test.compileClasspath
+            classpath += sourceSets.test.output
+            main = 'livevar.LiveVariable'
+        }
+    }
+}
