--- a/build.gradle
+++ b/build.gradle
@@ -640,7 +640,7 @@ subprojects {
         createCheckTypeTask(project.name, 'org.checkerframework.checker.nullness.NullnessChecker', 'NullnessSkipSome', ['-AskipUses=com.sun.*', '-AuseConservativeDefaultsForUncheckedCode=source'])
         createCheckTypeTask(project.name, 'org.checkerframework.framework.util.PurityChecker', 'Purity')
         createCheckTypeTask(project.name, 'org.checkerframework.checker.signature.SignatureChecker', 'Signature')
-        // These do not yet pass.  TODO: Make them pass.
+        // These do not yet pass on all subprojects.  TODO: Make them pass.
         createCheckTypeTask(project.name, 'org.checkerframework.checker.nullness.NullnessChecker', 'Nullness', ['-AskipUses=com.sun.*'])
 
 
@@ -803,10 +803,10 @@ subprojects {
         tasks.create(name: 'nonJunitTests', group: 'Verification') {
             description 'Run all Checker Framework tests except for the Junit tests.'
             dependsOn('checkInterning', 'checkPurity', 'checkSignature')
-            if (project.name.is('dataflow') || project.name.is('javacutil')) {
-                dependsOn('checkNullness')
-            } else {
+            if (project.name.is('framwork') || project.name.is('checker')) {
                 dependsOn('checkNullnessSkipSome')
+            } else {
+                dependsOn('checkNullness')
             }
 
             if (project.name.is('framework') || project.name.is('checker')) {
