Use -ArequirePrefixInWarningSuppressions when type-checking CF source code

--- a/build.gradle
+++ b/build.gradle
@@ -272,6 +272,7 @@ def createCheckTypeTask(projectName, checker, shortName, args = []) {
                 '-Xlint:-processing',
                 '-Xmaxerrs', '10000',
                 '-Xmaxwarns', '10000',
+		'-ArequirePrefixInWarningSuppressions',
                 ]
         options.compilerArgs += args
 
