--- a/docs/manual/Makefile
+++ b/docs/manual/Makefile
@@ -25,6 +25,7 @@ guieffect-checker.tex \
 units-checker.tex \
 signedness-checker.tex \
 aliasing-checker.tex \
+linear-checker.tex \
 purity-checker.tex \
 constant-value-checker.tex \
 returns-receiver-checker.tex \
